<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegestrationActivity"
    android:background="@drawable/background_auth_reg"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_child_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/rounded_parent_background"
            android:padding="10sp"
            android:text="Регистрация"
            android:textAllCaps="true"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="170sp"
            android:layout_height="150sp"
            android:background="@drawable/rounded_parent_background"
            android:padding="10sp"
            android:src="@drawable/ic_reg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250sp"
        android:background="@drawable/rounded_child_background"
        android:orientation="vertical"
        android:padding="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_parent_background"
            android:hint="Никнейм"
            android:inputType="text"
            android:padding="10sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@drawable/rounded_parent_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@drawable/rounded_parent_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10sp" />

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@drawable/rounded_parent_background"
            android:hint="@string/repeatPassword"
            android:inputType="textPassword"
            android:padding="10sp" />

        <TextView
            android:id="@+id/tvGoToAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:clickable="true"
            android:text="@string/haveAccount"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/btSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_parent_background"
            android:padding="10sp"
            android:text="@string/regestration"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>