<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationActivity"
    android:background="@drawable/background_auth_reg"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_child_background"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:padding="10sp"
            android:textSize="25sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/rounded_parent_background"
            android:text="Авторизация"/>
        <ImageView
            android:layout_width="170sp"
            android:layout_height="150sp"
            android:padding="10sp"
            android:background="@drawable/rounded_parent_background"
            android:src="@drawable/ic_auth"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:background="@drawable/rounded_child_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etAuthEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_parent_background"
            android:hint="@string/email"
            android:padding="10sp"/>

        <EditText
            android:id="@+id/etAuthPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@drawable/rounded_parent_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10sp"/>

        <TextView
            android:id="@+id/tvGoToRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="5sp"
            android:text="@string/dontHaveAccount"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/btSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_parent_background"
            android:padding="10sp"
            android:text="@string/authorization"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>